objects/ProductAttributeValue__c.object
<CustomObject>    
    <description>Represents the attribute values for a product class</description>
    <fields>
        <fullName>APTS_Service_Level__c</fullName>
        <label>Service Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Online and Batch</fullName>
                </value>
                <value>
                    <fullName>Batch</fullName>
                    <isActive>false</isActive>
                    <label>Batch</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>APTS_Screening_Type__c</fullName>
        <label>Screening Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sanctions Only</fullName>
                </value>
                <value>
                    <fullName>Sanctions &amp; Ownership Research &amp; PEP</fullName>
                </value>
                <value>
                    <fullName>Sanctions &amp; ownership research &amp; PEP &amp; Adverse Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>APTS_Batch_Screening_Band__c</fullName>
        <inlineHelpText>Name Screening Batch Band1 pricing exception: Pre-approved discount scheme for institutions who load less than 5,000 unique records in the Batch service.</inlineHelpText>
        <label>Batch Screening Band</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Band 1 : 0-5000</fullName>
                </value>
                <value>
                    <fullName>Band 1 : 5001-10000</fullName>
                </value>
                <value>
                    <fullName>Band 2 : 10001-50000</fullName>
                </value>
                <value>
                    <fullName>Band 3 : 50001-100000</fullName>
                </value>
                <value>
                    <fullName>Band 4 : 100001-250000</fullName>
                </value>
                <value>
                    <fullName>Band 5 : 250001-500000</fullName>
                </value>
                <value>
                    <fullName>Band 6 : 500001-1000000</fullName>
                </value>
                <value>
                    <fullName>Band 7 : 1000001-1500000</fullName>
                </value>
                <value>
                    <fullName>Band 8 : 1500001-2250000</fullName>
                </value>
                <value>
                    <fullName>Band 9 : 2250001-3500000</fullName>
                </value>
                <value>
                    <fullName>Band 10 : 3500001-6000000</fullName>
                </value>
                <value>
                    <fullName>Band 11 : 6000001-10000000</fullName>
                </value>
                <value>
                    <fullName>Band 12 : 10000001-15000000</fullName>
                </value>
                <value>
                    <fullName>Band 13 : 15000001-20000000</fullName>
                </value>
                <value>
                    <fullName>Band 14 : 20000001-25000000</fullName>
                </value>
                <value>
                    <fullName>Band 15 : 25000001-35000000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>	
	<fields>
        <fullName>APTS_EP_Threshold__c</fullName>
        <label>EP Threshold (%)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>7.1</fullName>
                </value>
                <value>
                    <fullName>7.7</fullName>
                </value>
                <value>
                    <fullName>8.3</fullName>
                </value>
                <value>
                    <fullName>9.1</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11.1</fullName>
                </value>
                <value>
                    <fullName>12.5</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>28.6</fullName>
                </value>
                <value>
                    <fullName>29.4</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>33.3</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>41.7</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>46.2</fullName>
                </value>
                <value>
                    <fullName>46.7</fullName>
                </value>
                <value>
                    <fullName>46.9</fullName>
                </value>
                <value>
                    <fullName>48</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>APTS_Sanctions_Screening_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A 50% discount for the first year for Subscription and additional Users is granted to customers that are already licensed with (or order) Sanctions Screening or KYC Registry</inlineHelpText>
        <label>Sanctions Screening Customer</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>APTS_KYC_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A 50% discount for the first year for Subscription and additional Users is granted to customers that are already licensed with (or order) Sanctions Screening or KYC Registry.</inlineHelpText>
        <label>KYC Customer</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>APTS_Proposal_Message__c</fullName>
        <label>Price Impact</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>RFP Product Attribute Value</label>
    <nameField>
        <displayFormat>AV-{0000000000}</displayFormat>
        <label>Attribute Value Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Attribute Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>    
</CustomObject>